añadiendo otro chamo

--- a/siu.html
+++ b/siu.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola mundo - chamo</p>
-    <p>otro chamo</p>
+    <p>Otro mas?</p>
 </body>
 </html>
