--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hola mundo - chamo</p>
-    <p>otro chamo</p>
-    <p>mas chamos</p>
+    <p>Hola mundo</p>
 </body>
 </html>
